# doctrine

./: .doc-audit-ledger.md  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONS_SYMBOLIC_DOCTRINE_PORT_IMPLEMENTATION_PLAN_2026-04-10.md  Makefile  PRINCIPLES.md  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  repomix-doctrine-code-and-examples.md  repomix.doctrine.config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_request.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr.yml  publish.yml
docs/: 01_TYPED_MARKDOWN_FOUNDATION_AND_DOCUMENT_SYSTEM.md  02_ANALYSIS_SCHEMA_AND_OUTPUT_CONTRACTS.md  03_ADVANCED_TYPED_MARKDOWN_RENDER_POLICY_AND_EXTENSION_SURFACES.md  04_REVIEW_ROUTE_ONLY_GROUNDING_AND_CONTROL_PLANE_INTEGRATION.md  99_LANGUAGE_GAP_AUDIT_2026-04-06.md  AGENT_IO_DESIGN_NOTES.md  AGENT_LINTER.md  AGENT_LINTER_CODEX_CLI_OUTPUT_2026-04-16.json  AGENT_LINTER_CODEX_CLI_OUTPUT_2026-04-16_v2.json  AGENT_LINTER_CODEX_CLI_PROOF_2026-04-16.md  AGENT_LINTER_OUTPUT_SCHEMA_2026-04-16.json  AGENT_LINTER_PROMPT_2026-04-16.md  AGENT_LINTER_PROOF_FIXTURE_2026-04-16.json  ANALYSIS_AND_SCHEMA_SPEC.md  ARCH_RECEIPT_CORE_PACKAGE_BRIDGE_2026-04-26.md  ARCH_SKILL_FLOW_CORE_2026-04-26.md  ARCH_SKILL_FLOW_CORE_2026-04-26_WORKLOG.md  ARCH_SKILL_GRAPH_CLOSURE_EMIT_2026-04-26.md  ARCH_SKILL_GRAPH_CLOSURE_EMIT_2026-04-26_WORKLOG.md  ARCH_STAGE_CORE_ROUTED_RECEIPTS_2026-04-26.md  AUTHORING_FRICTION_AUDIT_2026-04-18.md  AUTHORING_PATTERNS.md  BAD_LESSONS_PROSE_BUCKETS_V1_PROPOSAL_2026-04-10.md  BAD_LESSONS_PROSE_BUCKETS_V2_PROPOSAL_2026-04-10.md  BIG_ASS_DUMP_EXHAUSTIVE_IMPLEMENTATION_AUDIT_2026-04-12.md  BIG_ASS_DUMP_EXHAUSTIVE_IMPLEMENTATION_AUDIT_2026-04-12_SECOND_PASS.md  BIG_ASS_DUMP_EXHAUSTIVE_IMPLEMENTATION_AUDIT_2026-04-12_WORKLOG.md  BIG_ASS_DUMP_IMPLEMENTATION_GAP_AUDIT_2026-04-12.md  BIG_ASS_DUMP_IMPLEMENTATION_GAP_AUDIT_2026-04-12_WORKLOG.md  COMPILER_ERRORS.md  COMPILE_ERRORS_EXACT_LINES_AND_SHARED_PATTERN_2026-04-16.md  COMPILE_ERRORS_EXACT_LINES_AND_SHARED_PATTERN_2026-04-16_WORKLOG.md  DEPENDENCY_PROMPT_ROOT_PROVIDERS_2026-04-16.md  DEPENDENCY_PROMPT_ROOT_PROVIDERS_2026-04-16_WORKLOG.md  DOCTRINE_AGENT_DATA_FLOW_VISUALIZATION_2026-04-10.md  DOCTRINE_AGENT_DATA_FLOW_VISUALIZATION_2026-04-10_WORKLOG.md  DOCTRINE_AGENT_LINTER_SKILL_PACKAGE_2026-04-16.md  DOCTRINE_AGENT_LINTER_SKILL_PACKAGE_2026-04-16_WORKLOG.md  DOCTRINE_AUTHORING_SYNTAX_SUGAR_AUDIT_2026-04-16.md  DOCTRINE_COMPILER_SCALABILITY_AND_PARALLELISM_2026-04-11.md  (+142 more)
docs/aelaguiz/: remove_legacy_draft_port_references_2026-04-07.md  remove_legacy_draft_port_references_2026-04-07_WORKLOG.md
docs/archive/: DOCTRINE_FEATURE_REQUESTS_FROM_LESSONS_SYMBOLIC_PORT_2026-04-11.md  DOCTRINE_NATIVE_SOLUTIONS_FROM_LESSONS_SYMBOLIC_PORT_2026-04-11.md  EXTERNAL_AGENT_PATTERNS_AND_DOCTRINE_SUPPORT_2026-04-11.md  FINISH_ANALYSIS_SCHEMA_OUTPUT_CONTRACTS_2026-04-11.md  FINISH_ANALYSIS_SCHEMA_OUTPUT_CONTRACTS_2026-04-11_WORKLOG.md  FLOW_VISUALIZER_VERTICAL_AGENT_HANDOFF_LANES_2026-04-11.md  FLOW_VISUALIZER_VERTICAL_AGENT_HANDOFF_LANES_2026-04-11_WORKLOG.md  LESSONS_METADATA_PORT_BLOCKER_NOTE_2026-04-10.md  LESSONS_PORT_REMAINING_LANGUAGE_GAPS_2026-04-11.md  LESSONS_PORT_REMAINING_LANGUAGE_GAPS_FULL_IMPLEMENTATION_2026-04-11.md  LESSONS_PORT_REMAINING_LANGUAGE_GAPS_FULL_IMPLEMENTATION_2026-04-11_WORKLOG.md  METADATA_BINDING_MODEL_AND_MINI_LADDER_2026-04-10.md  METADATA_BINDING_MODEL_AND_MINI_LADDER_2026-04-10_WORKLOG.md  MULTI_AGENT_SHARED_IO_FLOW_VISUALIZER_2026-04-11.md  MULTI_AGENT_SHARED_IO_FLOW_VISUALIZER_2026-04-11_WORKLOG.md  PHASE1_TYPED_MARKDOWN_COMPLETION_PARITY_PLAN_2026-04-11.md  PHASE1_TYPED_MARKDOWN_COMPLETION_PARITY_PLAN_2026-04-11_WORKLOG.md  PHASE4_REVIEW_ROUTE_ONLY_GROUNDING_CONTROL_PLANE_COMPLETION_2026-04-11.md  PHASE4_REVIEW_ROUTE_ONLY_GROUNDING_CONTROL_PLANE_COMPLETION_2026-04-11_WORKLOG.md  PRO_PROPOSAL_2026-04-10.md  README.md  research_visualizations.md  (+2 more)
doctrine/: __init__.py  _package_release.py  _verify_skill_examples.py  compiler.py  diagnostic_smoke.py  diagnostics.py  emit_common.py  emit_contract.py  emit_docs.py  emit_flow.py  emit_skill.py  emit_skill_graph.py  flow_renderer.py  flow_svg.mjs  indenter.py  model.py  parser.py  project_config.py  prove_output_schema_openai.py  release_flow.py  renderer.py  skill_graph_source_receipts.py  skill_source_receipts.py  validate_output_schema.py  verify_corpus.py  verify_prereqs.py  verify_skill_examples.py  verify_skill_graph.py  verify_skill_receipts.py
example_agents/: README.md  inventory.toml  markdown_agents.md  test_case_buckets.md
examples/: README.md
pyprompt/: __init__.py  check_hello_world.py  compiler.py  diagnostic_smoke.py  diagnostics.py  emit_docs.py  indenter.py  model.py  parser.py  renderer.py  verify_corpus.py
tests/: test_addressable_self_refs.py  test_compile_diagnostics.py  test_compiler_boundary.py  test_decision_attachment.py  test_diagnostics_formatting.py  test_emit_docs.py  test_emit_flow.py  test_emit_skill.py  test_emit_skill_graph.py  test_enum_migration_preservation.py  test_field_type_ref.py  test_final_output.py  test_flow_namespace.py  test_grouped_inherit.py  test_import_loading.py  test_output_inheritance.py  test_output_rendering.py  test_output_schema_lowering.py  test_output_schema_surface.py  test_output_schema_validation.py  test_output_target_delivery_skill.py  test_package_release.py  test_parse_diagnostics.py  test_parser_source_spans.py  test_project_config.py  test_prove_output_schema_openai.py  test_release_flow.py  test_review_binding_shorthand.py  test_review_imported_outputs.py  test_route_output_semantics.py  test_skill_graph_rendering.py  test_skill_graph_semantics.py  test_skill_package_host_bindings.py  test_skill_rendering.py  test_table_declarations.py  test_typed_field_bodies.py  test_validate_output_schema.py  test_verify_corpus.py  test_verify_prereqs.py  test_verify_skill_examples.py  (+1 more)
(+1882 files in other folders)
