[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "doctrine"
version = "0.0.0"
description = "Doctrine is a Python-like DSL and compiler for reusable agent doctrine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "interegular>=0.3,<1",
    "lark>=1.2,<2",
]

[tool.setuptools]
packages = ["doctrine"]

[tool.setuptools.package-data]
doctrine = ["grammars/*.lark", "*.mjs"]

[tool.doctrine.emit]

[[tool.doctrine.emit.targets]]
name = "example_07_handoffs"
entrypoint = "examples/07_handoffs/prompts/AGENTS.prompt"
output_dir = "examples/07_handoffs/build"

[[tool.doctrine.emit.targets]]
name = "example_14_handoff_truth"
entrypoint = "examples/14_handoff_truth/prompts/AGENTS.prompt"
output_dir = "examples/14_handoff_truth/build"

[[tool.doctrine.emit.targets]]
name = "example_36_invalidation_and_rebuild"
entrypoint = "examples/36_invalidation_and_rebuild/prompts/AGENTS.prompt"
output_dir = "examples/36_invalidation_and_rebuild/build"

[[tool.doctrine.emit.targets]]
name = "example_73_flow_visualizer_showcase"
entrypoint = "examples/73_flow_visualizer_showcase/prompts/AGENTS.prompt"
output_dir = "examples/73_flow_visualizer_showcase/build"

[[tool.doctrine.emit.targets]]
name = "example_79_final_output_json_schema"
entrypoint = "examples/79_final_output_json_schema/prompts/AGENTS.prompt"
output_dir = "examples/79_final_output_json_schema/build"
