[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "doctrine"
version = "0.0.0"
description = "Typed DSL and compiler for reusable AI agent instructions and workflows that compile to AGENTS.md."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "interegular>=0.3,<1",
    "lark>=1.2,<2",
]

[project.urls]
Homepage = "https://github.com/aelaguiz/doctrine"
Documentation = "https://github.com/aelaguiz/doctrine/tree/main/docs"
Repository = "https://github.com/aelaguiz/doctrine"
Issues = "https://github.com/aelaguiz/doctrine/issues"

[tool.setuptools.packages.find]
include = ["doctrine*"]

[tool.setuptools.package-data]
doctrine = ["grammars/*.lark", "*.mjs"]

[tool.doctrine.emit]

[[tool.doctrine.emit.targets]]
name = "example_07_handoffs"
entrypoint = "examples/07_handoffs/prompts/AGENTS.prompt"
output_dir = "examples/07_handoffs/build"

[[tool.doctrine.emit.targets]]
name = "example_14_handoff_truth"
entrypoint = "examples/14_handoff_truth/prompts/AGENTS.prompt"
output_dir = "examples/14_handoff_truth/build"

[[tool.doctrine.emit.targets]]
name = "example_36_invalidation_and_rebuild"
entrypoint = "examples/36_invalidation_and_rebuild/prompts/AGENTS.prompt"
output_dir = "examples/36_invalidation_and_rebuild/build"

[[tool.doctrine.emit.targets]]
name = "example_73_flow_visualizer_showcase"
entrypoint = "examples/73_flow_visualizer_showcase/prompts/AGENTS.prompt"
output_dir = "examples/73_flow_visualizer_showcase/build"

[[tool.doctrine.emit.targets]]
name = "example_79_final_output_json_schema"
entrypoint = "examples/79_final_output_json_schema/prompts/AGENTS.prompt"
output_dir = "examples/79_final_output_json_schema/build"

[[tool.doctrine.emit.targets]]
name = "example_84_review_split_final_output_prose"
entrypoint = "examples/84_review_split_final_output_prose/prompts/AGENTS.prompt"
output_dir = "examples/84_review_split_final_output_prose/build"

[[tool.doctrine.emit.targets]]
name = "example_95_skill_package_minimal"
entrypoint = "examples/95_skill_package_minimal/prompts/SKILL.prompt"
output_dir = "examples/95_skill_package_minimal/build"

[[tool.doctrine.emit.targets]]
name = "example_96_skill_package_references"
entrypoint = "examples/96_skill_package_references/prompts/SKILL.prompt"
output_dir = "examples/96_skill_package_references/build"

[[tool.doctrine.emit.targets]]
name = "example_97_skill_package_scripts"
entrypoint = "examples/97_skill_package_scripts/prompts/SKILL.prompt"
output_dir = "examples/97_skill_package_scripts/build"

[[tool.doctrine.emit.targets]]
name = "example_98_skill_package_runtime_metadata"
entrypoint = "examples/98_skill_package_runtime_metadata/prompts/SKILL.prompt"
output_dir = "examples/98_skill_package_runtime_metadata/build"

[[tool.doctrine.emit.targets]]
name = "example_99_skill_package_plugin_metadata"
entrypoint = "examples/99_skill_package_plugin_metadata/prompts/SKILL.prompt"
output_dir = "examples/99_skill_package_plugin_metadata/build"

[[tool.doctrine.emit.targets]]
name = "example_100_skill_package_bundled_agents"
entrypoint = "examples/100_skill_package_bundled_agents/prompts/SKILL.prompt"
output_dir = "examples/100_skill_package_bundled_agents/build"

[[tool.doctrine.emit.targets]]
name = "example_101_skill_package_compendium"
entrypoint = "examples/101_skill_package_compendium/prompts/SKILL.prompt"
output_dir = "examples/101_skill_package_compendium/build"

[[tool.doctrine.emit.targets]]
name = "example_102_skill_package_path_case_preservation"
entrypoint = "examples/102_skill_package_path_case_preservation/prompts/SKILL.prompt"
output_dir = "examples/102_skill_package_path_case_preservation/build"

[[tool.doctrine.emit.targets]]
name = "example_103_skill_package_binary_assets"
entrypoint = "examples/103_skill_package_binary_assets/prompts/SKILL.prompt"
output_dir = "examples/103_skill_package_binary_assets/build"
